tests/ui/keyword/extern/keyword-extern-as-identifier-type.rs
type A = extern::foo::bar; //~ ERROR expected type, found keyword `extern`

fn main() {}

// ferrocene-annotations: fls_kgvleup5mdhq
// Type Aliases
